[BACKLOG-37116] - Fixing Focus Visibility in Table

--- a/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
+++ b/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
@@ -5308,6 +5308,10 @@ td.tab-spacer-wrapper {
   border-right: 1px solid #e0e0e0;
 }
 
+#dojox_grid__View_1 .dojoxGridCell:focus-visible {
+  outline-offset : -2px;
+}
+
 /* ======================= custom drop down control =========================== */
 .custom-list {
   border: 1px solid #CCC;
